# HesaiLidar_General_SDK

./: CMakeLists.txt  change notes.md
include/pandarGeneral_sdk/: pandarGeneral_sdk.h
src/: pandarGeneral_sdk.cc
src/PandarGeneralRaw/: CMakeLists.txt
src/PandarGeneralRaw/include/: log.h
src/PandarGeneralRaw/include/pandarGeneral/: pandarGeneral.h  pandarGeneral_internal.h  pcap_reader.h  point_types.h
src/PandarGeneralRaw/src/: pandarGeneral.cc  pandarGeneral_internal.cc  pcap_reader.cpp
test/: test.cc
